Initial commit: LegalMultiLens site with improved SEO and security

--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -13,7 +13,7 @@ const t = useTranslations(lang);
     <div class="team-member">
       <div class="member-photo">
         <img 
-          src="/images/lawyer-portrait.PNG" 
+          src="/images/lawyer-portrait.png" 
           alt={t('team.aaron.name')} 
           class="member-img" 
           width="180" 
