--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -18,7 +18,7 @@ const pageDescription = 'Le Cabinet d\'Avocats Aaron Toledano est spécialisé e
 <Layout 
   title={pageTitle}
   description={pageDescription}
-  image="/images/lawyer-portrait.PNG"
+  image="/images/lawyer-portrait.png"
 >
   <Hero />
   
